Add basic modules styles structure

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,3 +5,26 @@
 @import 'base/animations';
 @import 'base/reset';
 @import 'base/global';
+
+// Modules
+@import 'modules/k-btn';
+@import 'modules/k-input';
+@import 'modules/k-select';
+@import 'modules/k-checkbox';
+@import 'modules/k-radio';
+@import 'modules/k-container';
+@import 'modules/k-icon';
+@import 'modules/k-list';
+@import 'modules/k-breadcrumb';
+@import 'modules/k-section';
+@import 'modules/k-modal';
+@import 'modules/k-badge';
+@import 'modules/k-card';
+@import 'modules/k-progress';
+@import 'modules/k-alert';
+@import 'modules/k-divider';
+@import 'modules/k-table';
+@import 'modules/k-pagination';
+@import 'modules/k-loader';
+@import 'modules/k-tab';
+@import 'modules/k-dropdown';
