Add grid structure

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -5,3 +5,7 @@ $color-violet: #2A1E5C;
 $color-blue: #0A68FF;
 $color-black: #000000;
 $color-white: #FFFFFF;
+
+// Grid
+$grid-columns: 12;
+$page-max-width: 1170px;
