--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,3 +1,13 @@
+* {
+  box-sizing: border-box;
+
+  &:before,
+  &:after {
+    box-sizing: border-box;
+  }
+
+}
+
 html, body, div, span, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, a, img, strong, ol, ul, li, form, label, table, tbody, tfoot, thead, tr, th, td, article, aside, figure, figcaption, footer, header, nav, section, video {
   margin: 0;
   padding: 0;
