--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,3 +1,4 @@
+// Colors
 $color-orange: #FF7700;
 $color-green: #5EFC8D;
 $color-pink: #EE4266;
@@ -5,6 +6,9 @@ $color-violet: #2A1E5C;
 $color-blue: #0A68FF;
 $color-black: #000000;
 $color-white: #FFFFFF;
+$color-grey: #EEEEEE;
+$primary-color: $color-orange;
+$secondary-color: $color-violet;
 
 // Grid
 $grid-columns: 12;
