Add primary font

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -13,3 +13,6 @@ $secondary-color: $color-violet;
 // Grid
 $grid-columns: 12;
 $page-max-width: 1170px;
+
+// Fonts
+$primary-font: 'Poppins', sans-serif;
