--- a/scss/modules/_k-example.scss
+++ b/scss/modules/_k-example.scss
@@ -1,8 +1,8 @@
 .k-example {
 
   &__title {
-    margin-top: 30px;
-    margin-bottom: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 
 }
