Update global colors

--- a/scss/modules/_k-progress.scss
+++ b/scss/modules/_k-progress.scss
@@ -3,7 +3,7 @@
   border-radius: 4px;
 
   &__bar {
-    background-color: $primary-color;
+    background-color: $color-primary;
     width: 50%;
     height: 28px;
     border-radius: 4px;
