--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -7,10 +7,15 @@ $color-blue: #0A68FF;
 $color-black: #000000;
 $color-white: #FFFFFF;
 $color-grey: #EEEEEE;
-$primary-color: $color-orange;
-$secondary-color: $color-violet;
+
+$color-primary: $color-orange;
+$color-secondary: $color-violet;
+$color-tertiary: $color-blue;
 
 $kepler22b-colors: (
+  "primary": $color-primary,
+  "secondary": $color-secondary,
+  "tertiary": $color-tertiary,
   "orange": $color-orange,
   "green": $color-green,
   "pink": $color-pink,
