Add responsive breakpoints

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -29,3 +29,9 @@ $page-max-width: 1170px;
 
 // Fonts
 $primary-font: 'Poppins', sans-serif;
+
+// Responsive Breakpoints
+$small-width: 576px;
+$medium-width: 768px;
+$large-width: 992px;
+$extra-large-width: 1200px;
