Update grid for mobile

--- a/scss/modules/_k-row.scss
+++ b/scss/modules/_k-row.scss
@@ -1,6 +1,9 @@
 .k-row {
-  display: flex;
-  flex-wrap: wrap;
+
+  @include atMedium {
+    display: flex;
+    flex-wrap: wrap;
+  }
 
   &__col {
     padding: 16px;
@@ -8,7 +11,11 @@
 
   @for $i from 1 through $grid-columns {
     &__col--#{$i} {
-      flex: 0 0 100% / $grid-columns * $i;
+
+      @include atMedium {
+        flex: 0 0 100% / $grid-columns * $i;
+      }
+
     }
   }
 
